// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01 - No default theme. 01 - No options at registration. 01 - No extra themes 1`] = `
<div>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 01 - No extra themes 2`] = `
<div>
  <div>
    Child
  </div>
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 02 - Ad hoc theme 1`] = `
<div
  className="theme-a-legacy__container___Vxc65"
>
  <div
    className="theme-a-legacy__content___Bw9Ve"
  >
    Child
  </div>
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 1`] = `
<div>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 2`] = `
<div
  className="theme-b-legacy__container___mcbj4"
>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 1`] = `
<div>
  <div
    className="theme-c-legacy__content___PNxZs"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 2`] = `
<div
  className="theme-b-legacy__container___mcbj4"
>
  <div
    className="theme-c-legacy__content___PNxZs"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 3`] = `
<div
  className="theme-a-legacy__container___Vxc65"
>
  <div
    className="theme-a-legacy__content___Bw9Ve   theme-c-legacy__content___PNxZs"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 4`] = `
<div
  className="theme-b-legacy__container___mcbj4"
>
  <div
    className="theme-c-legacy__content___PNxZs"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 01 - No extra themes 1`] = `
<div
  className="theme-a-legacy__container___Vxc65"
>
  <div
    className="theme-a-legacy__content___Bw9Ve"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 01 - No extra themes 2`] = `
<div
  className="theme-a-legacy__container___Vxc65"
>
  <div
    className="theme-a-legacy__content___Bw9Ve"
  >
    Child
  </div>
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 02 - Ad hoc theme 1`] = `
<div
  className="theme-a-legacy__container___Vxc65   theme-b-legacy__container___mcbj4"
>
  <div
    className="theme-a-legacy__content___Bw9Ve"
  >
    Child
  </div>
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 1`] = `
<div
  className="theme-a-legacy__container___Vxc65"
>
  <div
    className="theme-a-legacy__content___Bw9Ve"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 2`] = `
<div
  className="theme-b-legacy__container___mcbj4  theme-a-legacy__container___Vxc65"
>
  <div
    className="theme-a-legacy__content___Bw9Ve"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 1`] = `
<div
  className="theme-a-legacy__container___Vxc65"
>
  <div
    className="theme-a-legacy__content___Bw9Ve   theme-c-legacy__content___PNxZs"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 2`] = `
<div
  className="theme-b-legacy__container___mcbj4  theme-a-legacy__container___Vxc65"
>
  <div
    className="theme-a-legacy__content___Bw9Ve   theme-c-legacy__content___PNxZs"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 3`] = `
<div
  className="theme-a-legacy__container___Vxc65"
>
  <div
    className="theme-c-legacy__content___PNxZs  theme-a-legacy__content___Bw9Ve   theme-d-legacy__content___K0EnN"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 01 - composeTheme 1`] = `
<div
  className="theme-a-legacy__container___Vxc65"
>
  <div
    className="theme-a-legacy__content___Bw9Ve"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 1`] = `
<div>
  <div />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 2`] = `
Object {
  "props": Object {
    "ref": null,
  },
  "theme": Object {
    "container": "theme-a-legacy__container___Vxc65",
    "content": "theme-a-legacy__content___Bw9Ve",
  },
}
`;
